# Raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  ObjLoader.cpp  ObjLoader.hpp  README.md  Renderer.cpp  Renderer.h  SplittableString.hpp  WalnutApp.cpp  bsdf.cpp  bsdf.hpp  camera.h  color_msg.h  compile_commands.json  defines.h  expected.h  image.cpp  image.h  intersection.cpp  intersection.hpp  kdtree.cpp  kdtree.h  launch.json  main.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  scene_types.h  textures.hpp  tmin  unit-test.cpp  vkvia.html
.cache/clangd/index/: _fixes.hpp.4477BB3B2AFA3CB3.idx  _vectorize.hpp.850F3A45C8736D4E.idx  camera.h.1D35888097247590.idx  common.hpp.DA899CE0A4EDAE68.idx  compute_common.hpp.0C7555AA29A60D55.idx  compute_vector_relational.hpp.7B66844366B829E7.idx  constants.hpp.6B535933C91F5A89.idx  constants.inl.ECB8641F38491ED6.idx  defines.h.626A8C52F7095044.idx  epsilon.hpp.6E2E57799CCF4D19.idx  epsilon.inl.22DED08FCF5E1B5A.idx  expected.h.65B91306EA1BC043.idx  exponential.hpp.18B60E8C9D82BB3E.idx  func_common.inl.872C3E400566BBE5.idx  func_exponential.inl.3AB63ED302498508.idx  func_geometric.inl.135B30483D9A42A6.idx  func_integer.inl.32AA714A4B3525FD.idx  func_matrix.inl.248DFB8326458F24.idx  func_packing.inl.16854D5AE1BC10BA.idx  func_trigonometric.inl.F45CC927126C2D9C.idx  func_vector_relational.inl.6C7A55B665A3A0DC.idx  fwd.hpp.04CB63CDE2BAB9F1.idx  geometric.hpp.975AA829D7033439.idx  glm.hpp.CF8417D5BD52EE3B.idx  image.cpp.D235EFE68AC6E7C1.idx  image.h.AC01D4EDBB88A211.idx  integer.hpp.E8A5FDF262559B9C.idx  kdtree.cpp.E3552A75C4A8A59F.idx  kdtree.h.431BD25A90AD1C07.idx  lodepng.cpp.EC2F8FEB97F4C6FD.idx  lodepng.h.71B895AE5CEDE62C.idx  main.cpp.1E79C0583D873031.idx  mat2x2.hpp.68868F4F8B13D736.idx  mat2x3.hpp.CA588B0B4624674C.idx  mat2x4.hpp.01EE1ED781A15398.idx  mat3x2.hpp.7000299DABEE935C.idx  mat3x3.hpp.D110F1636BE21E1E.idx  mat3x4.hpp.E6C26FCD261F6306.idx  mat4x2.hpp.B1691D335C378106.idx  mat4x3.hpp.68932E0AA1396303.idx  (+119 more)
.d/: image.d  kdtree.d  main.d  raytracer.d  scene.d
_autogen/: triangle.frag.h  triangle.vert.h
assets/: Sniper_Rifle.mtl  cornell-box.mtl  diamondblock.mtl  indoor_plant_02.mtl  reinforced_concrete_01_1k.hdr  scene5.mtl
cmake/: utilities.cmake
results/: proftext.txt
scripts/: format-all.sh  pngToPfm.py  splitCubeMap.py  visualize_halton.py
shaders/: triangle.frag  triangle.vert
src/: :  Camera.cpp  Camera.h  Light.cpp  Light.h  LightDistribution.cpp  LightDistribution.h  Material.cpp  Material.h  Medium.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Sky.h  application.cpp  application.h  bsdf.cpp  bsdf.hpp  defines.h  example_scenes.cpp  example_scenes.h  geometry.h  image.cpp  image.h  integrator.cpp  integrator.h  intersection.cpp  intersection.h  intersection.hpp  kdtree.cpp  kdtree.h  main.cpp  ray.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  scene_types.h  (+3 more)
src/materials/: Blinn.cpp  Blinn.h  CookTorrance.cpp  CookTorrance.h
src/mediums/: Fog.cpp  Fog.h
src/realtime/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  WalnutApp.h
src/rendering/: CPURenderer.cpp  CPURenderer.h  ImageRenderer.h
src/sampling/: rng.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  stratified.cpp  stratified.h
src/shapes/: cube.cpp  cube.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
